--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
                 android:name="android.app.default_searchable"
                 android:value=".activities.TextSearchResultActivity" />
         </activity>
+        <activity android:name=".activities.TrackScheduleActivity" />
         <activity
             android:name=".activities.TextSearchResultActivity"
             android:launchMode="singleTop" >
