Added EventDetailsFragment and Activity Renamed AbstractAsyncTaskLoader to LocalCacheLoader

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,7 @@
                 android:value=".activities.TextSearchResultActivity" />
         </activity>
         <activity android:name=".activities.TrackScheduleActivity" />
+        <activity android:name=".activities.EventDetailsActivity" />
         <activity
             android:name=".activities.TextSearchResultActivity"
             android:launchMode="singleTop" >
