--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,13 +32,13 @@
 
             <meta-data
                 android:name="android.app.default_searchable"
-                android:value=".activities.TextSearchResultActivity" />
+                android:value=".activities.SearchResultActivity" />
         </activity>
         <activity android:name=".activities.TrackScheduleActivity" />
         <activity android:name=".activities.EventDetailsActivity" />
         <activity android:name=".activities.PersonInfoActivity" />
         <activity
-            android:name=".activities.TextSearchResultActivity"
+            android:name=".activities.SearchResultActivity"
             android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
