Implemented details display on search suggestion click and global system search support.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,7 +51,8 @@
 
         <provider
             android:name=".providers.SearchSuggestionProvider"
-            android:authorities="be.digitalia.fosdem.search" />
+            android:authorities="be.digitalia.fosdem.search"
+            android:exported="true" />
     </application>
 
 </manifest>
