--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Permissions required for alarms -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <!-- Make touch screen optional since all screens can be used with a pad -->
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -53,6 +58,21 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/main_searchable" />
         </activity>
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/settings" />
+
+        <receiver
+            android:name=".receivers.AlarmReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".services.AlarmIntentService"
+            android:exported="false" />
 
         <provider
             android:name=".providers.SearchSuggestionProvider"
