--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-.idea
-.gradle
-build
+# built application files
+*.apk
+
+# generated files
+build/
+manifest-merger-release-report.txt
+
+# Local configuration file (sdk path, etc)
 local.properties
-*.iml
+
+# OS X thumbnail db
 .DS_Store
+
+# IDEA/Android Studio project files, because
+# the project can be imported from settings.gradle
+.idea
+*.iml
+
+# Gradle cache
+.gradle
 
