New dual-pane tablet layout featuring extended height Toolbar and CardView.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
                 android:name="android.app.default_searchable"
                 android:value=".activities.SearchResultActivity"/>
         </activity>
-        <activity android:name=".activities.TrackScheduleActivity">
+        <activity
+            android:name=".activities.TrackScheduleActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity"/>
