--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:21.0.+'
     // Version 1.2.3 has a bug and crashes when detecting 2-finger gestures. Use 1.2.2 instead.
     compile 'com.github.chrisbanes.photoview:library:1.2.2'
 }
