--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.fossasia"
     android:installLocation="auto"
-    android:versionCode="2"
-    android:versionName="1.0a" >
+    android:versionCode="3"
+    android:versionName="1.0b" >
 
     <uses-sdk
         android:minSdkVersion="7"
