--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
     defaultConfig {
         applicationId 'org.fossasia'
-        minSdkVersion 7
+        minSdkVersion 9
         targetSdkVersion 21
     }
     buildTypes {
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     // Version 1.2.3 has a bug and crashes when detecting 2-finger gestures. Use 1.2.2 instead.
     compile 'com.github.chrisbanes.photoview:library:1.2.2'
+    compile 'com.google.android.gms:play-services:6.5.+'
 }
