--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ android {
         applicationId "be.digitalia.fosdem"
         minSdkVersion 7
         targetSdkVersion 21
+        versionCode 700131
+        versionName "1.3.1"
     }
 
     buildTypes {
@@ -18,9 +20,13 @@ android {
     }
 }
 
+ext {
+    supportLibraryVersion = '21.0.3'
+}
+
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:cardview-v7:21.0.+'
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:cardview-v7:$supportLibraryVersion"
     // Version 1.2.3 has a bug and crashes when detecting 2-finger gestures. Use 1.2.2 instead.
     compile 'com.github.chrisbanes.photoview:library:1.2.2'
 }
