--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,7 @@
 <manifest
     package="be.digitalia.fosdem"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:installLocation="auto"
-    android:versionCode="700131"
-    android:versionName="1.3.1">
-
-    <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="21"/>
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.NFC"/>
