--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,7 +84,7 @@
             android:name=".activities.RoomImageDialogActivity"
             android:excludeFromRecents="true"
             android:taskAffinity=""
-            android:theme="@style/DialogTheme"/>
+            android:theme="@style/AlertDialogTheme"/>
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/settings"/>
