--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
 
     <application
         android:name="be.digitalia.fosdem.FosdemApplication"
-        android:allowBackup="true"
-        android:hardwareAccelerated="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
