--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "be.digitalia.fosdem"
         minSdkVersion 7
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 700138
         versionName "1.3.8"
         // Supported languages
         resConfigs "en"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -28,7 +29,7 @@ android {
 }
 
 ext {
-    supportLibraryVersion = '23.1.1'
+    supportLibraryVersion = '24.1.1'
 }
 
 dependencies {
