--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ ext {
 
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
     compile "com.android.support:cardview-v7:$supportLibraryVersion"
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
 }
