Use ${applicationId} placeholder in manifest where applicable for easier maintenance in forks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="be.digitalia.fosdem"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    package="be.digitalia.fosdem"
     android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -18,7 +18,7 @@
         android:required="false"/>
 
     <application
-        android:name="be.digitalia.fosdem.FosdemApplication"
+        android:name=".FosdemApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -61,7 +61,7 @@
 
                 <category android:name="android.intent.category.DEFAULT"/>
 
-                <data android:mimeType="application/be.digitalia.fosdem"/>
+                <data android:mimeType="application/${applicationId}"/>
             </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -115,7 +115,7 @@
 
         <provider
             android:name=".providers.SearchSuggestionProvider"
-            android:authorities="be.digitalia.fosdem.search"
+            android:authorities="${applicationId}.search"
             android:exported="true"/>
     </application>
 
