--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,11 @@
             android:name=".providers.SearchSuggestionProvider"
             android:authorities="${applicationId}.search"
             android:exported="true"/>
+        <provider
+            android:name=".providers.BookmarksExportProvider"
+            android:authorities="${applicationId}.bookmarks"
+            android:exported="false"
+            android:grantUriPermissions="true"/>
     </application>
 
 </manifest>
