--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "be.digitalia.fosdem"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 900146
         versionName "1.4.6"
@@ -22,14 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    aaptOptions {
-        cruncherEnabled false
-    }
 }
 
 ext {
-    supportLibraryVersion = '23.4.0'
+    supportLibraryVersion = '27.0.2'
 }
 
 dependencies {
@@ -37,5 +33,5 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
     compile "com.android.support:cardview-v7:$supportLibraryVersion"
     compile "com.android.support:customtabs:$supportLibraryVersion"
-    compile 'com.github.chrisbanes.photoview:library:1.2.4'
+    compile 'com.github.chrisbanes:PhotoView:2.1.3'
 }
