--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,7 +114,8 @@
 
         <service
             android:name=".services.AlarmIntentService"
-            android:exported="false"/>
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
 
         <provider
             android:name=".providers.SearchSuggestionProvider"
