--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation "com.android.support:customtabs:$supportLibraryVersion"
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 }
