--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "be.digitalia.fosdem"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 900146
-        versionName "1.4.6"
+        versionCode 1400150
+        versionName "1.5.0"
         // Supported languages
         resConfigs "en"
         vectorDrawables.useSupportLibrary = true
