--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,11 @@ android {
 }
 
 dependencies {
-    def supportLibraryVersion = '28.0.0'
-
-    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
-    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
-    implementation "com.android.support:preference-v7:$supportLibraryVersion"
-    implementation "com.android.support:customtabs:$supportLibraryVersion"
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.browser:browser:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
