--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
+    implementation ('androidx.preference:preference:1.1.0-alpha01') {
+        // Alpha versions of these dependencies are unstable
+        exclude group: 'androidx.fragment', module: 'fragment'
+        exclude group: 'androidx.core', module: 'core'
+    }
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
