--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
 
     defaultConfig {
         applicationId "be.digitalia.fosdem"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
-        versionCode 1500160
+        versionCode 1600160
         versionName "1.6.0"
         // Supported languages
         resConfigs "en"
@@ -25,6 +25,8 @@ android {
 }
 
 dependencies {
+    def room_version = "2.1.0-alpha03"
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
@@ -36,5 +38,8 @@ dependencies {
     }
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.paging:paging-runtime:2.1.0-rc01'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
