--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,20 +25,20 @@ android {
 }
 
 dependencies {
-    def room_version = "2.1.0-alpha03"
+    def room_version = "2.1.0-alpha04"
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation ('androidx.preference:preference:1.1.0-alpha02') {
+    implementation('androidx.preference:preference:1.1.0-alpha02') {
         // Alpha versions of these dependencies are unstable
         exclude group: 'androidx.fragment', module: 'fragment'
         exclude group: 'androidx.core', module: 'core'
     }
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.paging:paging-runtime:2.1.0-rc01'
+    implementation 'androidx.paging:paging-runtime:2.1.0'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
