Move bookmark status into its own ViewModel controlled by the activity and integrate a bottom app bar with a floating action button to manage bookmark status. Auto-hide the top toolbar on scroll in event details screens Remove legacy UnderlinePageIndicator. Swiping is still possible.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,11 +53,13 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activities.TrackScheduleEventActivity"
-            android:label="@string/event_details"/>
+            android:label="@string/event_details"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activities.EventDetailsActivity"
             android:label="@string/event_details"
-            android:parentActivityName=".activities.TrackScheduleActivity">
+            android:parentActivityName=".activities.TrackScheduleActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
 
