Use the new postprocessing DSL block to configure code and resources shrinking Stop using reflection to instantiate fragments in MainActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,13 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            postprocessing {
+                removeUnusedCode true
+                removeUnusedResources true
+                obfuscate true
+                optimizeCode false
+                proguardFiles 'proguard-rules.pro'
+            }
         }
     }
 }
