--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,19 +34,15 @@ android {
 }
 
 dependencies {
-    def room_version = "2.1.0-alpha04"
+    def room_version = "2.1.0-alpha06"
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation('androidx.preference:preference:1.1.0-alpha02') {
-        // Alpha versions of these dependencies are unstable
-        exclude group: 'androidx.fragment', module: 'fragment'
-        exclude group: 'androidx.core', module: 'core'
-    }
+    implementation 'androidx.preference:preference:1.1.0-alpha04'
     implementation 'androidx.browser:browser:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
     implementation 'androidx.paging:paging-runtime:2.1.0'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
