Enable R8 full mode and bytecode optimizations to slim down the app even more

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
                 removeUnusedCode true
                 removeUnusedResources true
                 obfuscate true
-                optimizeCode false
+                optimizeCode true
                 proguardFiles 'proguard-rules.pro'
             }
         }
