--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
 language: android
+
+jdk: openjdk11
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 android:
   components:
     - android-28
@@ -6,3 +18,7 @@ android:
 
 script:
   - ./gradlew clean assembleRelease
+
+branches:
+  only:
+    - master
