--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ android {
 
 dependencies {
     def lifecycle_version = "2.1.0"
-    def room_version = "2.2.0"
+    def room_version = "2.2.1"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
@@ -47,6 +47,6 @@ dependencies {
     implementation 'androidx.paging:paging-runtime:2.1.0'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation 'com.squareup.okhttp3:okhttp:3.12.4'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.6'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
