--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,8 @@ dependencies {
     def room_version = "2.2.1"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
