--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 
-jdk: openjdk11
+jdk: oraclejdk8
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -13,8 +13,8 @@ cache:
 
 android:
   components:
-    - android-28
-    - build-tools-28.0.3
+    - android-29
+    - build-tools-29.0.2
 
 script:
   - ./gradlew clean assembleRelease
