--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0-rc01'
     implementation 'androidx.transition:transition:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
